регистрация, мэйн, логин, частично формы

--- a/form_talents.html
+++ b/form_talents.html
@@ -21,10 +21,10 @@
             <ul class="navigation">
                 <li class="menu-item"><span class="profile-ico"></span></li>
                 <li class="menu-item languages-menu">
-                    <span class="current-language">EN</span>
+                    <span class="current-language bg-black">EN</span>
                     <ul class="languages">
-                        <li class="language">RU</li>
-                        <li class="language">KZ</li>
+                        <li class="language bg-black">RU</li>
+                        <li class="language bg-black">KZ</li>
                     </ul>
                 </li>
                 <li class="menu-item multilinks">
@@ -1449,10 +1449,12 @@
 
                                 <div class="row">
                                     <div class="col-12">
-                                        <div class="calculator">
-                                            <h3 class="title uppercase">Добавить</h3>
-                                            <button class="count-button plus" type="button"></button>
-                                            <button class="count-button minus" type="button"></button>
+                                        <div class="body-block">
+                                            <div class="calculator">
+                                                <h3 class="title uppercase">Добавить</h3>
+                                                <button class="count-button plus" type="button"></button>
+                                                <button class="count-button minus" type="button"></button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -1785,34 +1787,16 @@
 
             <div class="form">
 
-                <div class="body-block">
-
-                    <div class="row">
-                        <div class="col-6">
-                            <h3 class="subtitle underlined uppercase">фотогалерея</h3>
-                            <div class="photo-info">
-                                <p class="description uppercase">загрузить
-                                    <img class="arrow" src="assets/images/row.svg" alt="">
-                                </p>
-
-                                <p>Перетащите фотографии сюда</p>
-                                <p>Вы можете одновременно загрузить от 4 до 20 фотографий</p>
-                            </div>
-                            <div class="download">
-                                <span class="circle"></span>
-                                <span>файлы загружены</span>
-                                <button class="download-button">фотогид</button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-
                 <div class="photo-card">
 
                     <div class="photo photo-1">
                         <img class="img-block" src="assets/images/bg-11.jpg" alt="">
+
+                        <div class="photo-description">
+                            <h5 class="uppercase">ФОТО В РОСТ</h5>
+                            <p class="description">Добавьте фотографию в формате JPG </p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1820,7 +1804,12 @@
                     </div>
 
                     <div class="photo photo-2">
-                        <img class="img-block" src="assets/images/bg-13.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-gray.jpg" alt="">
+                        <div class="photo-description">
+                            <h5 class="uppercase">ЛЕГКАЯ УЛЫБКА</h5>
+                            <p class="description">Добавьте фотографию в формате JPG </p>
+                        </div>
+                        <img class="right arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1828,7 +1817,12 @@
                     </div>
 
                     <div class="photo photo-3">
-                        <img class="img-block" src="assets/images/bg-14.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-gray.jpg" alt="">
+                        <div class="photo-description">
+                            <h5 class="uppercase">УЛЫБКА В ЗУБЫ</h5>
+                            <p class="description">Добавьте фотографию в формате JPG </p>
+                        </div>
+                        <img class="right arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1836,7 +1830,12 @@
                     </div>
 
                     <div class="photo photo-4">
-                        <img class="img-block" src="assets/images/bg-15.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-gray.jpg" alt="">
+                        <div class="photo-description">
+                            <h5 class="uppercase">НАХМУРИВШИСЬ</h5>
+                            <p class="description">Добавьте фотографию в формате JPG </p>
+                        </div>
+                        <img class="right arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1844,7 +1843,12 @@
                     </div>
 
                     <div class="photo photo-5">
-                        <img class="img-block" src="assets/images/bg-16.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-gray.jpg" alt="">
+                        <div class="photo-description">
+                            <h5 class="uppercase">ПОЗИТИВНОЕ УДИВЛЕНИЕ</h5>
+                            <p class="description">Добавьте фотографию в формате JPG </p>
+                        </div>
+                        <img class="right arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1853,7 +1857,13 @@
 
 
                     <div class="photo photo-6">
-                        <img class="img-block" src="assets/images/bg-12.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-11.jpg" alt="">
+
+                        <div class="photo-description">
+                            <h5 class="uppercase">ФОТО В ТРИ ЧЕТВЕРТИ, СРЕДНЕ- ОБЩИЙ ПЛАН</h5>
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1861,7 +1871,12 @@
                     </div>
 
                     <div class="photo photo-7">
-                        <img class="img-block" src="assets/images/bg-17.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-gray.jpg" alt="">
+                        <div class="photo-description">
+                            <h5 class="uppercase">ФОТО С РУКАМИ ТЫЛЬНОЙ СТОРОНЫ</h5>
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow right" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1869,7 +1884,12 @@
                     </div>
 
                     <div class="photo photo-8">
-                        <img class="img-block" src="assets/images/bg-18.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-gray.jpg" alt="">
+                        <div class="photo-description">
+                            <h5 class="uppercase">ПРОФИЛЬ ИЛИ В ТРИ ЧЕТВЕРТИ</h5>
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow right" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1878,6 +1898,10 @@
 
                     <div class="photo photo-9">
                         <img class="img-block" src="assets/images/bg-9.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow right" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1886,6 +1910,10 @@
 
                     <div class="photo photo-10">
                         <img class="img-block" src="assets/images/bg-10.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow right" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1894,6 +1922,10 @@
 
                     <div class="photo photo-11">
                         <img class="img-block" src="assets/images/bg-7.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1902,6 +1934,10 @@
 
                     <div class="photo photo-12">
                         <img class="img-block" src="assets/images/bg-8.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1909,7 +1945,11 @@
                     </div>
 
                     <div class="photo photo-13">
-                        <img class="img-block" src="assets/images/bg-4.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-6.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1918,6 +1958,10 @@
 
                     <div class="photo photo-14">
                         <img class="img-block" src="assets/images/bg-5.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1925,7 +1969,11 @@
                     </div>
 
                     <div class="photo photo-15">
-                        <img class="img-block" src="assets/images/bg-6.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-4.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1934,6 +1982,10 @@
 
                     <div class="photo photo-16">
                         <img class="img-block" src="assets/images/bg-1.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1942,6 +1994,10 @@
 
                     <div class="photo photo-17">
                         <img class="img-block" src="assets/images/bg-2.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG </p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
@@ -1949,7 +2005,11 @@
                     </div>
 
                     <div class="photo photo-18">
-                        <img class="img-block" src="assets/images/bg-2.jpg" alt="">
+                        <img class="img-block" src="assets/images/bg-green.jpg" alt="">
+                        <div class="photo-description">
+                            <p class="description">Загрузите фотографию в формате JPG</p>
+                        </div>
+                        <img class="arrow" src="assets/images/row.svg" alt="">
                         <div class="div">
                             <button type="button" class="btn red">редактировать</button>
                             <button type="button" class="btn">удалить</button>
