--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 
 <body class="bg-image">
 
-<div class="container">
+<div class="container container-disable-on-mobile">
   <div class="header-box">
     <a href="#" class="link-to-home"><img src="assets/images/logo.svg" alt=""></a>
 
@@ -23,15 +23,14 @@
       <nav class="header-nav">
         <ul class="navigation">
           <li class="menu-item languages-menu">
-            <span class="current-language">EN</span>
+            <span class="current-language bg-black">RU</span>
             <ul class="languages">
-              <li class="language">RU</li>
-              <li class="language">KZ</li>
+              <li class="language bg-black">EN</li>
+              <li class="language bg-black">KZ</li>
             </ul>
           </li>
           <li class="menu-item multilinks">
-            <a href="#" class="menu-link">ВОЙТИ</a>
-            <a href="#" class="menu-link">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+            <a href="#" class="menu-link uppercase">Главная</a>
           </li>
         </ul>
       </nav>
@@ -69,14 +68,13 @@
                 <button class="button">войти</button>
               </form>
 
-              <a href="#" class="button facebook-color">ВОЙТИ С ПОМОЩЬЮ FACEBOOK</a>
             </div>
 
           </div>
 
           <div class="right-side">
-            <div class="film-box" data-background-color="b0caea"
-                 style="background-image:url('assets/images/slides/tulpan-slide.png')">
+            <div class="film-box" data-background-color="b0caea">
+                <img class="img-block" src="assets/images/slides/tulpan-slide.png" alt="">
             </div>
           </div>
         </div>
